<resources>
    <string name="app_name">Teach Me</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="google_place_api" translatable="false">AIzaSyDhsBha62aBt7yOoZct-YAhNlOLJkbsUkI</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="search_hint">Find Teacher…</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="tab_text_1">Courses</string>
    <string name="tab_text_2">Recommended</string>
    <string name="tab_text_3">Favorites</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="email_optional">Email(optional)</string>
    <string name="password">Password</string>
    <string name="change_password">Change current password</string>
    <string name="age">Age</string>
    <string-array name="title_spinner">
        <item>Select a Title</item>
        <item>None</item>
        <item>Mr.</item>
        <item>Ms.</item>
        <item>Mrs.</item>
        <item>Dr.</item>
    </string-array>
    <string name="location">Location: </string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="login">Login</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_account">Don\'t have account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="done">Done</string>
    <string name="im_a">I\'m a</string>
    <string name="already_have_account">I already have an account</string>
    <string name="student_name">Student name: </string>
    <string name="course_grade">Course(Grade): </string>
    <string name="date">Date: </string>
    <string name="time">Time: </string>
    <string name="duration">Duration: </string>
    <string name="cancel">Cancel</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Log out</string>
    <string name="next">Next</string>
    <string name="select_grades">Select Grades:</string>
    <string name="additional_info">Additional information about yourself(Qualifications, etc…)</string>
    <string name="courses_i_teach">Courses I can teach</string>
    <string name="click_to_add_courses">Click here to add courses!</string>
    <string name="about_teacher">About Teacher</string>
    <string name="comments">Comments</string>
    <string name="request_teacher">Request Teacher</string>
    <string name="no_information_inserted">Teacher hasn\'t provided any information.</string>
    <string name="course">Course:</string>
    <string name="grade">Grade:</string>
    <string name="duration_minutes">Duration(minutes):</string>

    <string name="connection_error">Connection error</string>

    <string name="pref_category_notifications_key">notificationsTitle</string>
    <string name="pref_category_notifications_title">Notifications</string>
    <string name="pref_messages_screen_title">Messages notifications</string>
    <string name="pref_messages_screen_summary">Modify messages notifications</string>
    <string name="pref_requests_screen_title">Requests notifications</string>
    <string name="pref_requests_screen_summary">Modify requests notifications</string>
    <string name="pref_reminders_screen_title">Reminders notifications</string>
    <string name="pref_reminders_screen_summary">Modify reminders notifications</string>
    <string name="pref_notification_vibrate">Vibrate</string>
    <string name="pref_notification_playsound">Play sound</string>
    <string name="pref_notification_sound">Notification sound</string>
    <string name="pref_default_reminder">Remind me before</string>
    <string name="preferences_title">Preferences</string>
    <string name="action_send_request">Send request</string>
    <string name="request_sent">Request sent successfully</string>
    <string name="could_not_send_request">Couldn\'t send request</string>
    <string name="please_select_a_course">Please select a course</string>
    <string name="please_select_a_grade">Please select a grade</string>
    <string name="pick_a_valid_date_and_time">Please pick a valid date and time</string>
    <string name="duration_should_be_between">Duration must be between 30 and 240</string>
    <string name="fill_duration_field">Please fill the duration field</string>
    <string name="lesson_info">Lesson information</string>
    <string name="reminder">Reminder</string>
    <string name="remind_me_before">Remind me before:</string>
    <string name="send_a_message">Send a message</string>
    <string name="default_reminder">Default</string>
    <string name="please_select_a_title">Please select a title</string>
    <string name="first_name_is_invalid">First name is invalid</string>
    <string name="last_name_is_invalid">Last name is invalid</string>
    <string name="please_select_a_country">Please select a country</string>
    <string name="password_must_contain_6">Password must contain 6 characters at least</string>
    <string name="username_is_too_short">Username is too short</string>
    <string name="please_enter_a_valid_email">Please enter a valid email</string>
    <string name="please_enter_a_valid_username">Please enter a valid username</string>
    <string name="username_is_used">Username is used by another user</string>
    <string name="email_is_used">Email is used by another user</string>
    <string name="register_success">Registered successfully, login to your account</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="request_confirmed">Request confirmed</string>
    <string name="could_not_confirm_request">Couldn\'t confirm request</string>
    <string name="request_info">Request information</string>
    <string name="lesson_time">Lesson time:</string>
    <string name="timeline">Timeline</string>
    <string name="schedule">Schedule</string>
    <string name="messages">Messages</string>
    <string name="requests">Requests</string>
    <string name="lessons_history">Lessons history</string>
    <string name="find_teacher">Find Teacher</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="feedback">Feedback</string>
    <string name="already_added_to_favourites">Teacher is already added to favourites</string>
    <string name="something_went_wrong">Something went wrong, try again</string>
    <string name="write_a_comment">Write a comment:</string>
    <string name="submit">Submit</string>
    <string name="teacher_name">Teacher name:</string>
    <string name="profile_updated">Profile updated</string>
    <string name="lessons">Lessons</string>
    <string name="give_one_star_at_least">Give 1 star at least</string>
    <string name="password_unchanged">Password(Unchanged)</string>
    <string name="action_save_profile">Save profile</string>
    <string name="student_has_not_rated">Student hasn\'t rated this lesson</string>
    <string name="no_comments_found">No comments found.</string>
    <string name="take_picture">Take a picture</string>
    <string name="pick_from_gallery">Pick from gallery</string>
    <string name="profile_picture">Profile picture</string>
    <string name="am">AM:</string>
    <string name="pm">PM:</string>
    <string name="ok">OK</string>
    <string name="no_location_specified">No location specified</string>
    <string name="pref_category_reminder_key">reminderTitle</string>
    <string name="pref_category_reminder_title">Reminder</string>
    <string name="pref_reminder_startingnow">Starting now reminder</string>
    <string name="your_lesson_conflicts_with_another_lesson">Your lesson conflicts with another lesson.</string>
    <string name="no_teachers_found">No teachers found</string>
    <string name="price">Hour price: %d</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="username_must_contain">Username can only contain letters and numbers</string>
    <string name="name_is_too_short">Name is too short</string>
    <string name="name_is_too_long">Name is too long</string>
    <string name="field_updated">%1$s edited successfully</string>
    <string name="updating_field">Updating...</string>

    <string-array name="reminders">
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>20 minutes</item>
        <item>30 minutes</item>
        <item>45 minutes</item>
        <item>1 hour</item>
        <item>2 hours</item>
    </string-array>

    <string-array name="remindersValues">
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>30</item>
        <item>45</item>
        <item>60</item>
        <item>120</item>
    </string-array>

    <string-array name="durations">
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>1.5 hour</item>
        <item>2 hours</item>
        <item>2.5 hours</item>
        <item>3 hours</item>
        <item>3.5 hours</item>
        <item>4 hours</item>
        <item>4.5 hours</item>
        <item>5 hours</item>
    </string-array>

    <string-array name="durationsValues">
        <item>30</item>
        <item>60</item>
        <item>90</item>
        <item>120</item>
        <item>150</item>
        <item>180</item>
        <item>210</item>
        <item>240</item>
        <item>270</item>
        <item>300</item>
    </string-array>

    <string name="notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hour_price">Hour price: %f</string>
</resources>
